@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2013, 2023, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2013, 2025, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -39,9 +39,7 @@ import java.nio.charset.Charset;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
-import java.security.AccessController;
-import java.security.PrivilegedActionException;
-import java.security.PrivilegedExceptionAction;
+import java.time.Duration;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collections;
@@ -251,7 +249,7 @@ public final class ProcessTools {
                                        TimeUnit unit)
             throws IOException, InterruptedException, TimeoutException {
         System.out.println("[" + name + "]:" + String.join(" ", processBuilder.command()));
-        Process p = privilegedStart(processBuilder);
+        Process p = processBuilder.start();
         StreamPumper stdout = new StreamPumper(p.getInputStream());
         StreamPumper stderr = new StreamPumper(p.getErrorStream());
 
@@ -391,7 +389,7 @@ public final class ProcessTools {
                 "--dry-run", "--list-modules","--validate-modules", "-m", "--module", "-version");
 
         final List<String> doubleWordArgs = List.of(
-                "--add-opens", "--upgrade-module-path", "--add-modules", "--add-exports",
+                "--add-opens", "--upgrade-module-path", "--add-modules", "--add-exports", "--enable-native-access",
                 "--limit-modules", "--add-reads", "--patch-module", "--module-path", "-p");
 
         ArrayList<String> args = new ArrayList<>();
@@ -608,43 +606,69 @@ public final class ProcessTools {
     }
 
     /**
-     * Executes a test jvm process, waits for it to finish and returns
+     * Executes a process using the java launcher from the jdk to
+     * be tested, waits for it to finish and returns
      * the process output.
      *
      * <p>The process is created using runtime flags set up by:
      * {@link #createTestJavaProcessBuilder(String...)}. The
      * jvm process will have exited before this method returns.
      *
-     * @param cmds User specified arguments.
+     * @param command User specified arguments.
      * @return The output from the process.
      */
-    public static OutputAnalyzer executeTestJvm(List<String> cmds) throws Exception {
-        return executeTestJvm(cmds.toArray(String[]::new));
+    public static OutputAnalyzer executeTestJava(List<String> command) throws Exception {
+        return executeTestJava(command.toArray(String[]::new));
     }
 
     /**
-     * Executes a test jvm process, waits for it to finish and returns
+     * Executes a process using the java launcher from the jdk to
+     * be tested, waits for it to finish and returns
      * the process output.
      *
      * <p>The process is created using runtime flags set up by:
      * {@link #createTestJavaProcessBuilder(String...)}. The
      * jvm process will have exited before this method returns.
      *
-     * @param cmds User specified arguments.
+     * @param command User specified arguments.
      * @return The output from the process.
      */
-    public static OutputAnalyzer executeTestJvm(String... cmds) throws Exception {
-        ProcessBuilder pb = createTestJavaProcessBuilder(cmds);
+    public static OutputAnalyzer executeTestJava(String... command) throws Exception {
+        ProcessBuilder pb = createTestJavaProcessBuilder(command);
         return executeProcess(pb);
     }
 
     /**
-     * @param cmds User specified arguments.
+     * Executes a process using the java launcher from the jdk to
+     * be tested, waits for it to finish and returns
+     * the process output.
+     *
+     * <p>The process is created using runtime flags set up by:
+     * {@link #createLimitedTestJavaProcessBuilder(String...)}. The
+     * jvm process will have exited before this method returns.
+     *
+     * @param command User specified arguments.
      * @return The output from the process.
-     * @see #executeTestJvm(String...)
      */
-    public static OutputAnalyzer executeTestJava(String... cmds) throws Exception {
-        return executeTestJvm(cmds);
+    public static OutputAnalyzer executeLimitedTestJava(List<String> command) throws Exception {
+        return executeLimitedTestJava(command.toArray(String[]::new));
+    }
+
+    /**
+     * Executes a process using the java launcher from the jdk to
+     * be tested, waits for it to finish and returns
+     * the process output.
+     *
+     * <p>The process is created using runtime flags set up by:
+     * {@link #createLimitedTestJavaProcessBuilder(String...)}. The
+     * jvm process will have exited before this method returns.
+     *
+     * @param command User specified arguments.
+     * @return The output from the process.
+     */
+    public static OutputAnalyzer executeLimitedTestJava(String... command) throws Exception {
+        ProcessBuilder pb = createLimitedTestJavaProcessBuilder(command);
+        return executeProcess(pb);
     }
 
     /**
@@ -689,7 +713,7 @@ public final class ProcessTools {
         Process p = null;
         boolean failed = false;
         try {
-            p = privilegedStart(pb);
+            p = pb.start();
             if (input != null) {
                 try (PrintStream ps = new PrintStream(p.getOutputStream())) {
                     ps.print(input);
@@ -697,15 +721,15 @@ public final class ProcessTools {
             }
 
             output = new OutputAnalyzer(p, cs);
-            p.waitFor();
+
+            // Wait for the process to finish. Call through the output
+            // analyzer to get correct logging and timestamps.
+            output.waitFor();
 
             {   // Dumping the process output to a separate file
                 var fileName = String.format("pid-%d-output.log", p.pid());
                 var processOutput = getProcessLog(pb, output);
-                AccessController.doPrivileged((PrivilegedExceptionAction<Void>) () -> {
-                    Files.writeString(Path.of(fileName), processOutput);
-                    return null;
-                });
+                Files.writeString(Path.of(fileName), processOutput);
                 System.out.printf(
                         "Output and diagnostic info for process %d " +
                                 "was saved into '%s'%n", p.pid(), fileName);
@@ -735,7 +759,7 @@ public final class ProcessTools {
      * @param cmds The command line to execute.
      * @return The output from the process.
      */
-    public static OutputAnalyzer executeProcess(String... cmds) throws Throwable {
+    public static OutputAnalyzer executeProcess(String... cmds) throws Exception {
         return executeProcess(new ProcessBuilder(cmds));
     }
 
@@ -780,8 +804,7 @@ public final class ProcessTools {
      * @param cmds The command line to execute.
      * @return The {@linkplain OutputAnalyzer} instance wrapping the process.
      */
-    public static OutputAnalyzer executeCommand(String... cmds)
-            throws Throwable {
+    public static OutputAnalyzer executeCommand(String... cmds) throws Exception {
         String cmdLine = String.join(" ", cmds);
         System.out.println("Command line: [" + cmdLine + "]");
         OutputAnalyzer analyzer = ProcessTools.executeProcess(cmds);
@@ -798,8 +821,7 @@ public final class ProcessTools {
      * @param pb The ProcessBuilder to execute.
      * @return The {@linkplain OutputAnalyzer} instance wrapping the process.
      */
-    public static OutputAnalyzer executeCommand(ProcessBuilder pb)
-            throws Throwable {
+    public static OutputAnalyzer executeCommand(ProcessBuilder pb) throws Exception {
         String cmdLine = pb.command().stream()
                 .map(x -> (x.contains(" ") || x.contains("$"))
                         ? ("'" + x + "'") : x)
@@ -853,16 +875,6 @@ public final class ProcessTools {
         pb.environment().put(libPathVar, newLibPath);
 
         return pb;
-    }
-
-    @SuppressWarnings("removal")
-    private static Process privilegedStart(ProcessBuilder pb) throws IOException {
-        try {
-            return AccessController.doPrivileged(
-                    (PrivilegedExceptionAction<Process>) pb::start);
-        } catch (PrivilegedActionException e) {
-            throw (IOException) e.getException();
-        }
     }
 
     private static class ProcessImpl extends Process {
@@ -938,6 +950,15 @@ public final class ProcessTools {
             return rslt;
         }
 
+        @Override
+        public boolean waitFor(Duration duration) throws InterruptedException {
+            boolean rslt = p.waitFor(duration);
+            if (rslt) {
+                waitForStreams();
+            }
+            return rslt;
+        }
+
         private void waitForStreams() throws InterruptedException {
             try {
                 stdoutTask.get();
@@ -960,7 +981,7 @@ public final class ProcessTools {
         String[] classArgs = new String[args.length - 2];
         System.arraycopy(args, 2, classArgs, 0, args.length - 2);
         Class<?> c = Class.forName(className);
-        Method mainMethod = c.getMethod("main", new Class[] { String[].class });
+        Method mainMethod = c.getMethod("main", new Class<?>[] { String[].class });
         mainMethod.setAccessible(true);
 
         if (testThreadFactoryName.equals("Virtual")) {
